# BabelEcho

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml  resume-prompt.md
docs/: 5090D远程测试流程.md  Phase2双轨后端与静态前端架构.md  architecture.md  backend-mvp.md  backend-mvp0-runbook.md  backend-mvp0-tech-stack.md  claude-design-prompt.md  roadmap.md  source-ingestion-research.md  voice-calibration-explainer.md  前端Artifact契约与只读界面说明.md  单URL自用运行手册.md  音色模型选择与单多人规则全记录.md
docs/plans/: README.md
frontend/: README.md  index.html  serve.py
frontend/css/: app.css  tokens.css
frontend/design-reference/: BabelEcho (Tool version).dc.html  BabelEcho.dc.html  Concept Cinematic.dc.html  Concept Terminal.dc.html  (+1 more)
tests/: test_adapt.py  test_article.py  test_asr.py  test_audio.py  test_audio_normalize.py  test_audio_pipeline.py  test_audio_source.py  test_checks.py  test_cli_smoke.py  test_config.py  test_cosyvoice_wrapper.py  test_diarization.py  test_end_to_end_fixture.py  test_episode_convert.py  test_episode_page.py  test_ingest.py  test_itunes.py  test_llm.py  test_overrides.py  test_podcast.py  test_podcast_index_api.py  test_publish.py  test_source_matrix.py  test_speaker_aliases.py  test_speaker_embedding_wrapper.py  test_speaker_similarity.py  test_speaker_voices.py  test_synthesize.py  test_transcript.py  test_transcript_candidates.py  test_transcript_cleaning.py  test_transcript_quality.py  test_voice_profile.py  test_youtube.py
tools/: cosyvoice_tts_wrapper.py  openai_whisper_asr_wrapper.py  pyannote_diarization_wrapper.py  speaker_embedding_wrapper.py
(+88 files in other folders)
